[package]
name = "heylisten"
version = "0.1.0"
edition = "2024"

license = "MIT"
description = "battery notification service"
homepage = "https://github.com/Estherenne/heylisten"
repository = "https://github.com/Estherenne/heylisten"
readme = "README.md"
keywords = ["battery", "alert", "notification"]

[dependencies]
battery = "0.7.8"
notify-rust = "4.11.7"
